--- a/templates/base.html
+++ b/templates/base.html
@@ -8,22 +8,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
 
     <!-- bootstrap & fontawesome -->
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/static/font-awesome/4.5.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/font-awesome/4.5.0/css/font-awesome.min.css"/>
 
     <!-- page specific plugin styles -->
 
     <!-- text fonts -->
-    <link rel="stylesheet" href="/static/css/fonts.googleapis.com.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/fonts.googleapis.com.css"/>
 
     <!-- ace styles -->
-    <link rel="stylesheet" href="/static/css/ace.min.css" class="ace-main-stylesheet" id="main-ace-style"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/ace.min.css" class="ace-main-stylesheet"
+          id="main-ace-style"/>
 
     <!--[if lte IE 9]>
 			<link rel="stylesheet" href="/static/css/ace-part2.min.css" class="ace-main-stylesheet" />
 		<![endif]-->
-    <link rel="stylesheet" href="/static/css/ace-skins.min.css"/>
-    <link rel="stylesheet" href="/static/css/ace-rtl.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/ace-skins.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/ace-rtl.min.css"/>
 
     <!--[if lte IE 9]>
 		  <link rel="stylesheet" href="/static/css/ace-ie.min.css" />
@@ -319,6 +320,26 @@
                             </ul>
                         </li>
 
+                        <li class="green dropdown-modal">
+                            <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                                <i class="ace-icon fa fa-envelope icon-animated-vertical"></i>
+                                <span class="badge badge-success">5</span>
+                            </a>
+
+                            <ul class="dropdown-menu-right dropdown-navbar dropdown-menu dropdown-caret dropdown-close">
+                                <li class="dropdown-header">
+                                    <i class="ace-icon fa fa-envelope-o"></i>
+                                    5 Messages
+                                </li>
+                                <li class="dropdown-footer">
+                                    <a href="#">
+                                        See all messages
+                                        <i class="ace-icon fa fa-arrow-right"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
                         <li class="dropdown-footer">
                             <a href="#">
                                 See all messages
@@ -328,42 +349,54 @@
                     </ul>
                 </li>
 
-                <li class="light-blue dropdown-modal">
-                    <a data-toggle="dropdown" href="#" class="dropdown-toggle">
-                        <img class="nav-user-photo" src="/static/images/avatars/user.jpg" alt="Jason's Photo"/>
-                        <span class="user-info">
-									<small>Welcome,</small>
-									Jason
+                {% if request.user.is_anonymous %}
+                    <li class="light-blue dropdown-modal">
+                        <a href="/login/" style="background-color: #7B3F25" >
+                            登录
+                        </a>
+                    </li>
+                    <li class="light-blue dropdown-modal">
+                        <a href="/register/" style="background-color: crimson">
+                            注册
+                        </a>
+                    </li>
+                {% else %}
+                    <li class="light-blue dropdown-modal">
+                        <a data-toggle="dropdown" href="#" class="dropdown-toggle" style="background-color: brown">
+                            <img class="nav-user-photo" src="/static/images/avatars/user.jpg" alt="Jason's Photo"/>
+                            <span class="user-info">
+									<small>Welcome ,</small>
+									{{ request.user.username }}
 								</span>
+                            <i class="ace-icon fa fa-caret-down"></i>
+                        </a>
+                        <ul class="user-menu dropdown-menu-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
+                            <li>
+                                <a href="#">
+                                    <i class="ace-icon fa fa-cog"></i>
+                                    系统设置
+                                </a>
+                            </li>
 
-                        <i class="ace-icon fa fa-caret-down"></i>
-                    </a>
+                            <li>
+                                <a href="#">
+                                    <i class="ace-icon fa fa-user"></i>
+                                    修改资料
+                                </a>
+                            </li>
 
-                    <ul class="user-menu dropdown-menu-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
-                        <li>
-                            <a href="#">
-                                <i class="ace-icon fa fa-cog"></i>
-                                系统设置
-                            </a>
-                        </li>
+                            <li class="divider"></li>
 
-                        <li>
-                            <a href="#">
-                                <i class="ace-icon fa fa-user"></i>
-                                修改资料
-                            </a>
-                        </li>
+                            <li>
+                                <a href="/logout/">
+                                    <i class="ace-icon fa fa-power-off"></i>
+                                    退出登录
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                {% endif %}
 
-                        <li class="divider"></li>
-
-                        <li>
-                            <a href="#">
-                                <i class="ace-icon fa fa-power-off"></i>
-                                退出登录
-                            </a>
-                        </li>
-                    </ul>
-                </li>
             </ul>
         </div>
     </div><!-- /.navbar-container -->
@@ -417,7 +450,7 @@
 
         <ul class="nav nav-list">
             <li class="active">
-                <a href="#">
+                <a href="/index/">
                     <i class="menu-icon fa fa-tachometer"></i>
                     <span class="menu-text"> 后台首页 </span>
                 </a>
@@ -571,7 +604,7 @@
                 <ul class="breadcrumb">
                     <li>
                         <i class="ace-icon fa fa-home home-icon"></i>
-                        <a href="#">主页</a>
+                        <a href="/index/">主页</a>
                     </li>
                     <li class="active"></li>
                 </ul><!-- /.breadcrumb -->
