--- a/templates/login.html
+++ b/templates/login.html
@@ -17,6 +17,7 @@
 
     <!-- ace styles -->
     <link rel="stylesheet" href="/static/css/ace.min.css"/>
+    <link rel="stylesheet" href="/static/css/login.css"/>
 
     <!--[if lte IE 9]>
 			<link rel="stylesheet" href="/static/css/ace-part2.min.css" />
@@ -63,18 +64,20 @@
 
                                     <div class="space-6"></div>
 
-                                    <form>
+                                    <form action="/login/" method="post">
+                                        {% csrf_token %}
                                         <fieldset>
                                             <label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input type="text" class="form-control" placeholder="用户名"/>
+															<input type="text" name="username" class="form-control"
+                                                                   placeholder="用户名"/>
 															<i class="ace-icon fa fa-user"></i>
 														</span>
                                             </label>
 
                                             <label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input type="password" class="form-control"
+															<input type="password" name="password" class="form-control"
                                                                    placeholder="密码"/>
 															<i class="ace-icon fa fa-lock"></i>
 														</span>
@@ -84,11 +87,11 @@
 
                                             <div class="clearfix">
                                                 <label class="inline">
-                                                    <input type="checkbox" class="ace"/>
+                                                    <input type="checkbox" name="remenber_pwd" class="ace"/>
                                                     <span class="lbl"> 记住密码 </span>
                                                 </label>
 
-                                                <button type="button"
+                                                <button type="submit" id="btn-login"
                                                         class="width-35 pull-right btn btn-sm btn-primary">
                                                     <i class="ace-icon fa fa-key"></i>
                                                     <span class="bigger-110"> 登录 </span>
@@ -109,7 +112,7 @@
                                     </div>
 
                                     <div>
-                                        <a href="#" data-target="#signup-box" class="user-signup-link">
+                                        <a href="/redister/" data-target="#signup-box" class="user-signup-link">
                                             现在注册！
                                             <i class="ace-icon fa fa-arrow-right"></i>
                                         </a>
@@ -128,21 +131,22 @@
 
                                     <div class="space-6"></div>
                                     <p>
-                                        请输入您的邮箱并按提示操作！
+                                        请输入您的邮箱并按提示操作：
                                     </p>
 
-                                    <form>
+                                    <form action="/forget_pwd/" method="post">
+                                        {% csrf_token %}
                                         <fieldset>
                                             <label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input type="email" class="form-control"
+															<input type="email" name="email-find" class="form-control"
                                                                    placeholder="Email"/>
 															<i class="ace-icon fa fa-envelope"></i>
 														</span>
                                             </label>
 
                                             <div class="clearfix">
-                                                <button type="button" class="width-35 pull-right btn btn-sm btn-danger">
+                                                <button type="submit" class="width-35 pull-right btn btn-sm btn-danger">
                                                     <i class="ace-icon fa fa-lightbulb-o"></i>
                                                     <span class="bigger-110">发送!</span>
                                                 </button>
@@ -169,27 +173,33 @@
                                     </h4>
 
                                     <div class="space-6"></div>
-                                    <p> 请输入您的详细信息开始注册: </p>
+                                    <p> 请输入您的信息开始注册: </p>
 
-                                    <form>
+                                    <form action="/register/" method="post">
+                                        {% csrf_token %}
                                         <fieldset>
                                             <label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input type="email" class="form-control" placeholder="邮箱"/>
+															<input type="email" id="email" name="email"
+                                                                   class="form-control"
+                                                                   placeholder="邮箱"/>
 															<i class="ace-icon fa fa-envelope"></i>
 														</span>
                                             </label>
 
                                             <label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input type="text" class="form-control" placeholder="用户名"/>
+															<input type="text" id="username" name="username"
+                                                                   class="form-control"
+                                                                   placeholder="用户名"/>
 															<i class="ace-icon fa fa-user"></i>
 														</span>
                                             </label>
 
                                             <label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input type="password" class="form-control"
+															<input type="password" id="password" name="password"
+                                                                   class="form-control"
                                                                    placeholder="密码"/>
 															<i class="ace-icon fa fa-lock"></i>
 														</span>
@@ -197,14 +207,16 @@
 
                                             <label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input type="password" class="form-control"
+															<input type="password" id="password2" name="password2"
+                                                                   class="form-control"
                                                                    placeholder="重复密码"/>
 															<i class="ace-icon fa fa-retweet"></i>
 														</span>
+                                                <span id="message"></span>
                                             </label>
 
                                             <label class="block">
-                                                <input type="checkbox" class="ace"/>
+                                                <input type="checkbox" id="protocol" class="ace"/>
                                                 <span class="lbl">
 															我接受
 															<a href="#">用户协议</a>
@@ -214,12 +226,12 @@
                                             <div class="space-24"></div>
 
                                             <div class="clearfix">
-                                                <button type="reset" class="width-30 pull-left btn btn-sm">
+                                                <button type="reset" id="reset" class="width-30 pull-left btn btn-sm">
                                                     <i class="ace-icon fa fa-refresh"></i>
                                                     <span class="bigger-110">重置</span>
                                                 </button>
 
-                                                <button type="button"
+                                                <button type="submit" id="register" disabled="disabled"
                                                         class="width-65 pull-right btn btn-sm btn-success">
                                                     <span class="bigger-110">注册</span>
 
@@ -311,6 +323,71 @@
         });
 
     });
+</script>
+<script>
+    $("#protocol").change(function () {
+        if ($("#protocol").is(":checked") == true) {
+            $("#register").attr("disabled", false);
+        } else {
+            $("#register").attr("disabled", true);
+        }
+    })
+
+    $("#password2").blur(function () {
+        var p1 = $("#password").val();
+        var p2 = $("#password2").val();
+        if (p1 != p2) {
+            $("#message").text("两次密码不一致！");
+            $("#register").attr("disabled", true);
+        } else {
+            $("#message").text("");
+            if ($("#protocol").is(":checked") == true) {
+                $("#register").attr("disabled", false);
+            }
+        }
+    })
+
+    $("#reset").click(function () {
+        $("#email").val("");
+        $("#username").val("");
+        $("#password").val("");
+        $("#password2").val("");
+        $("#message").text("");
+    })
+
+    //CSRF设置
+    $.ajaxSetup({
+        data: {csrfmiddlewaretoken: '{{ csrf_token }}'},
+    });
+
+    $("#email").blur(function () {
+        $.post(
+            "/account/check_email/",
+            {
+                "email": $("#email").val()
+            },
+            function (data) {
+                if (data["message"] == 1) {
+                    $("#message").text("该邮箱已注册！");
+                }
+            }
+        )
+    })
+
+    $("#username").blur(function () {
+        $.post(
+            "/account/check_username/",
+            {
+                "username": $("#username").val()
+            },
+            function (data) {
+                if (data["message"] == 1) {
+                    $("#message").text("该用户名已被注册！");
+                }
+            }
+        )
+    })
+
 </script>
 </body>
 </html>
