--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="zh-Hans">
+﻿<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Target Material Design Bootstrap Admin Template</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/static/assets/materialize/css/materialize.min.css" media="screen,projection"/>
+    {% block title %}
+        <title> 舆情监控系统 </title>
+    {% endblock %}
     <!-- Bootstrap Styles-->
     <link href="/static/assets/css/bootstrap.css" rel="stylesheet"/>
     <!-- FontAwesome Styles-->
@@ -15,9 +16,8 @@
     <!-- Custom Styles-->
     <link href="/static/assets/css/custom-styles.css" rel="stylesheet"/>
     <!-- Google Fonts-->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
-    <link rel="stylesheet" href="/static/assets/js/Lightweight-Chart/cssCharts.css">
-    <link rel="stylesheet" type="text/css" href="/static/assets/css/base.css"/>
+    <link href='/static/assets/css/abc.css' rel='stylesheet' type='text/css'/>
+    <link href="/static/css/base.css" rel="stylesheet" type="text/css"/>
     {% block css %}{% endblock %}
     {% block js %}{% endblock %}
 </head>
@@ -26,118 +26,160 @@
 <div id="wrapper">
     <nav class="navbar navbar-default top-navbar" role="navigation">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle waves-effect waves-dark" data-toggle="collapse"
-                    data-target=".sidebar-collapse">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand waves-effect waves-dark" href="base.html"><i class="large material-icons">track_changes</i>
-                <strong>target</strong></a>
-
-            <div id="sideNav" href=""><i class="material-icons dp48">toc</i></div>
+            <a class="navbar-brand" href="base.html"><i class="fa fa-gear"></i> <strong>舆情监控</strong></a>
         </div>
 
         <ul class="nav navbar-top-links navbar-right">
-            <li><a class="dropdown-button waves-effect waves-dark" href="#!" data-activates="dropdown4"><i
-                    class="fa fa-envelope fa-fw"></i> <i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a class="dropdown-button waves-effect waves-dark" href="#!" data-activates="dropdown3"><i
-                    class="fa fa-tasks fa-fw"></i> <i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a class="dropdown-button waves-effect waves-dark" href="#!" data-activates="dropdown2"><i
-                    class="fa fa-bell fa-fw"></i> <i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a class="dropdown-button waves-effect waves-dark" href="#!" data-activates="dropdown1"><i
-                    class="fa fa-user fa-fw"></i> <b>John Doe</b> <i
-                    class="material-icons right">arrow_drop_down</i></a></li>
-        </ul>
-    </nav>
-    <!-- Dropdown Structure -->
-    <ul id="dropdown1" class="dropdown-content">
-        <li><a href="#"><i class="fa fa-user fa-fw"></i> My Profile</a>
-        </li>
-        <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-        </li>
-        <li><a href="#"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-        </li>
-    </ul>
-    <ul id="dropdown2" class="dropdown-content w250">
-        <li>
-            <div>
-                <i class="fa fa-comment fa-fw"></i> New Comment
-                <span class="pull-right text-muted small">4 min</span>
-            </div>
-            </a>
-        </li>
-    </ul>
-    <ul id="dropdown3" class="dropdown-content dropdown-tasks w250">
-        <li>
-            <a href="#">
-                <div>
-                    <p>
-                        <strong>Task 1</strong>
-                        <span class="pull-right text-muted">60% Complete</span>
-                    </p>
-                    <div class="progress progress-striped active">
-                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60"
-                             aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                            <span class="sr-only">60% Complete (success)</span>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </li>
-    </ul>
-    <ul id="dropdown4" class="dropdown-content dropdown-tasks w250 taskList">
-        <li>
-            <div>
-                <strong>John Doe</strong>
-                <span class="pull-right text-muted">
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
+                    <i class="fa fa-envelope fa-fw"></i> <i class="fa fa-caret-down"></i>
+                </a>
+                <ul class="dropdown-menu dropdown-messages">
+                    <li>
+                        <a href="#">
+                            <div>
+                                <strong>John Doe</strong>
+                                <span class="pull-right text-muted">
                                         <em>Today</em>
                                     </span>
-            </div>
-            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...</p>
-            </a>
-        </li>
-    </ul>
+                            </div>
+                            <div>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...</div>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a class="text-center" href="#">
+                            <strong>Read All Messages</strong>
+                            <i class="fa fa-angle-right"></i>
+                        </a>
+                    </li>
+                </ul>
+                <!-- /.dropdown-messages -->
+            </li>
+            <!-- /.dropdown -->
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
+                    <i class="fa fa-tasks fa-fw"></i> <i class="fa fa-caret-down"></i>
+                </a>
+                <ul class="dropdown-menu dropdown-tasks">
+                    <li>
+                        <a href="#">
+                            <div>
+                                <p>
+                                    <strong>Task 1</strong>
+                                    <span class="pull-right text-muted">60% Complete</span>
+                                </p>
+                                <div class="progress progress-striped active">
+                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60"
+                                         aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                                        <span class="sr-only">60% Complete (success)</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+
+                </ul>
+                <!-- /.dropdown-tasks -->
+            </li>
+            <!-- /.dropdown -->
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
+                    <i class="fa fa-bell fa-fw"></i> <i class="fa fa-caret-down"></i>
+                </a>
+                <ul class="dropdown-menu dropdown-alerts">
+                    <li>
+                        <a href="#">
+                            <div>
+                                <i class="fa fa-comment fa-fw"></i> New Comment
+                                <span class="pull-right text-muted small">4 min</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="text-center" href="#">
+                            <strong>See All Alerts</strong>
+                            <i class="fa fa-angle-right"></i>
+                        </a>
+                    </li>
+                </ul>
+                <!-- /.dropdown-alerts -->
+            </li>
+            <!-- /.dropdown -->
+            {% if request.user.is_anonymous %}
+                <li class="dropdown">
+                    <a href="/login/"> 登录 </a>
+                </li>
+                <li class="dropdown">
+                    <a href="/register/"> 注册 </a>
+                </li>
+                <li class="dropdown"></li>
+            {% else %}
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
+                        <i class="fa fa-user fa-fw"></i> {{ request.user.username }}&nbsp;<i class="fa fa-caret-down"></i>
+                    </a>
+                    <ul class="dropdown-menu dropdown-user">
+                        <li><a href="#"><i class="fa fa-user fa-fw"></i> 资料修改 </a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-gear fa-fw"></i> 系统设置 </a>
+                        </li>
+                        <li class="divider"></li>
+                        <li><a href="/logout/"><i class="fa fa-sign-out fa-fw"></i> 退出登录 </a>
+                        </li>
+                    </ul>
+                    <!-- /.dropdown-user -->
+                </li>
+                <!-- /.dropdown -->
+            {% endif %}
+
+        </ul>
+    </nav>
     <!--/. NAV TOP  -->
     <nav class="navbar-default navbar-side" role="navigation">
+        <!--<div id="sideNav" href=""><i class="fa fa-caret-right"></i></div>-->
         <div class="sidebar-collapse">
             <ul class="nav" id="main-menu">
 
                 <li>
-                    <a class="active-menu waves-effect waves-dark" href="/index/"><i class="fa fa-dashboard"></i>
-                        Dashboard</a>
+                    <a class="active-menu" href="/index/"><i class="fa fa-dashboard"></i> 后台首页 </a>
                 </li>
-
                 <li>
-                    <a href="#" class="waves-effect waves-dark"><i class="fa fa-sitemap"></i> Multi-Level Dropdown<span
-                            class="fa arrow"></span></a>
-                    <ul class="nav left-list nav-second-level">
+                    <a href="#"><i class="fa fa-sitemap"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
+                    <ul class="nav nav-second-level">
                         <li>
-                            <a href="#">Login</a>
+                            <a class="mysecond" href="#">Second Level Link</a>
                         </li>
                         <li>
-                            <a href="#">Register</a>
+                            <a class="mysecond" href="#">Second Level Link</a>
+                        </li>
+                        <li>
+                            <a class="mysecond" href="#">Second Level Link</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#" class="waves-effect waves-dark"><i class="fa fa-fw fa-file"></i> Empty Page</a>
+                    <a href="#"><i class="fa fa-fw fa-file"></i> Empty Page</a>
                 </li>
-            </ul>                       
+            </ul>
+
         </div>
 
     </nav>
     <!-- /. NAV SIDE  -->
-
     <div id="page-wrapper">
-        {% block content %}
-            <div class="container">
-                <div class="row">
-                    <h1>This is Index!</h1>
-                </div>
-            </div>
-        {% endblock %}
+        <div id="page-inner">
+            {% block content %}
+
+            {% endblock %}
+        </div>
+        <!-- /. PAGE INNER  -->
     </div>
     <!-- /. PAGE WRAPPER  -->
 </div>
@@ -145,11 +187,8 @@
 <!-- JS Scripts-->
 <!-- jQuery Js -->
 <script src="/static/assets/js/jquery-1.10.2.js"></script>
-
 <!-- Bootstrap Js -->
 <script src="/static/assets/js/bootstrap.min.js"></script>
-
-<script src="/static/assets/materialize/js/materialize.min.js"></script>
 
 <!-- Metis Menu Js -->
 <script src="/static/assets/js/jquery.metisMenu.js"></script>
@@ -165,7 +204,14 @@
 
 <!-- Custom Js -->
 <script src="/static/assets/js/custom-scripts.js"></script>
-
+<script>
+    $('.mysecond').mouseenter(function () {
+        $(this).css('color', 'yellow')
+    })
+    $('.mysecond').mouseleave(function () {
+        $(this).css('color', 'white')
+    })
+</script>
 
 </body>
 
