--- a/static/assets/css/custom-styles.css
+++ b/static/assets/css/custom-styles.css
@@ -1,8 +1,3 @@
-/*----------------------------------------------
-Author : www.webthemez.com
-License: Commons Attribution 3.0
-http://creativecommons.org/licenses/by/3.0/
-------------------------------------------------*/
 
 
 /*----------------------------------------------
@@ -10,7 +5,8 @@ http://creativecommons.org/licenses/by/3.0/
 ------------------------------------------------*/
 body {
     font-family: 'Open Sans', sans-serif;
-    background: #1F2837;
+  background: #32C2CD url(../img/bg-img.jpg) !important;
+  
 }
 
  #wrapper {
@@ -20,17 +16,16 @@ body {
 #page-wrapper {
     padding: 15px 15px;
     min-height: 600px;
-    background: #ececec;
+    background: #E6E6E6;
 }
 #page-inner {
     width:100%;
     margin:10px 20px 10px 0px;
-    padding: 15px 30px;
+    background-color:transparent;
+    padding:10px;
     min-height:1200px;
 }
-.header .container-fluid{
-padding:0;
-}
+
 .text-center {
     text-align:center;
 }
@@ -55,19 +50,11 @@ h4 {
 border-radius: 0px;
 
 }
+.tlinks{text-indent:-9999px;height:0;line-height:0;font-size:0;overflow:hidden;}
 p {
-    font-size: 14px;
+    font-size:16px;
     line-height:25px;
-    /* padding-top:20px; */
-}
-label {
-    display: inline-block;
-    max-width: 100%;
-    margin-bottom: 5px;
-    font-weight: 400;
-}
-.alert { 
-    border-radius: 0px;
+    padding-top:20px;
 }
 .navbar-side {
     z-index: 0; 
@@ -75,28 +62,47 @@ label {
 .panel{
 border-radius:0px;
 }
-.navbar-side .nav > li > a > i{color: rgba(255, 255, 255, 0.62);padding: 8px;width: 20px;text-align: center;font-size: 14px;}
-.top-navbar{position: fixed;width: 100%;z-index: 300;-webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.05);-moz-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.05);box-shadow: 0 3px 3px rgba(0, 0, 0, 0.05);box-shadow: 0 1px 3px 0 rgba(0,0,0,.2),0 1px 1px 0 rgba(0,0,0,.14),0 2px 1px -1px rgba(0,0,0,.12);}
+.navbar-side .nav > li > a > i{
+color: #FFFFFF;
+padding: 8px;
+width: 30px;
+text-align: center;
+}
+.top-navbar{
+position: fixed;
+  width: 100%;
+  z-index: 300;
+    -webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.05);
+}
 .navbar-side {
-  z-index: 2;
+  z-index: 1;
   position: fixed;
   width: 260px;
   top: 80px;
-  box-shadow: none;
 }
 #page-wrapper {
   position: relative;
   top: 55px;
-  /* box-shadow: 0 0 10px #757575; */
-  -moz-box-shadow: 0 0 10px #757575;
-  /* -webkit-box-shadow: 0 0 10px #757575; */
 }
-.top-navbar .nav > li > a:hover, .top-navbar .nav > li > a:focus {text-decoration: none;background-color: #e0e8f5;color: #fff;}
+.top-navbar .nav > li > a:hover, .top-navbar .nav > li > a:focus {
+text-decoration: none;
+background-color: #2497BA;
+color: #fff;
+}
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
-background-color: #075CB3;
-border-color: #075CB3;
+background-color: #23C1CD;
+border-color: #24C2CD;
 }
-.breadcrumb {padding: 10px 10px 10px 20px;margin-bottom: 0;list-style: none;border-radius: 0;/* -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05); *//* box-shadow: 0 1px 1px rgba(0,0,0,.05); */background: transparent;line-height: 20px;font-size: 13px;margin-left: 14px;}
+.breadcrumb {
+padding: 18px;
+margin-bottom: 20px;
+list-style: none;
+background-color: #FFFFFF;
+border-radius: 0;
+-webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);    box-shadow: 0 1px 1px rgba(0,0,0,.05);
+}
 .dropdown-menu>li>a {
   display: block;
   padding: 3px 20px;
@@ -108,57 +114,58 @@ border-color: #075CB3;
   font-size: 13px;
 }
 .dropdown-menu>li>a i {
-  color: #1F1F1F;
+  color: #24C2CE;
 }
 .text-muted {
-  color: #213452;
+  color: #FB5651;
 }
 .badge {
   display: inline-block;
   min-width: 10px;
-  /* padding: 4px 7px; */
+  padding: 4px 7px;
   font-size: 11px;
-  font-weight: 300;
+  font-weight: 700;
   color: #fff;
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
-  background-color: #F09B22;
+  background-color: #24C2CE;
   border-radius: 10px;
 }
-.closed{
-	-ms-transform: rotate(180deg); /* IE 9 */
-    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
-    transform: rotate(180deg);	
-}
-.closed i{color: #adadad;}
 /*----------------------------------------------
    DASHBOARD STYLES    
 ------------------------------------------------*/
-.page-header {padding-bottom: 0;margin: 0;border-bottom: 1px solid transparent;text-align: left;background-color: transparent;padding: 32px 22px 10px 28px;color: #323232;}
+.page-header {
+padding-bottom: 9px;
+margin: 10px 0 20px;
+border-bottom: 1px solid transparent;
+text-align: left;}
 .panel-left{  
 width: 100px;
-height: 100px;background: #0866C6;/* border: 2px solid #4590DA; */
-/* border-radius: 100%; */
+height: 100px;
+background: #32D088;
+border: 2px solid white;
+border-radius: 100%;
 overflow: hidden;
 
 margin: 12px;}
 .panel-left .fa-5x {
-font-size: 3em;color: rgb(240, 155, 34);
+font-size: 3em;
+color: rgba(255, 255, 255, 0.69);
 padding: 29px 0;
-margin-bottom:30px;}
+margin-bottom:30px;
+}
 .panel-right{  
 height: 124px;
 background: transparent;
-margin-bottom: 0;color: #AFAFAF;
-
-float: left;text-align: left;padding-left: 20px;font-size: 16px;text-shadow: none;font-weight: normal;text-align: center;}
+margin-bottom: 0;
+color: #2B2E33;
+background-color: #fff;
+float: left;text-align: left;padding-left: 20px;}
 .panel-right h3{  
 font-size: 40px;
-padding: 18px 10px 13px 0;color: #5D5D5D;}
-.panel-right strong{
-	font-weight:normal;
-	color: #737373;
+padding: 18px 10px 13px 0;
+color: #8A8A8A;
 }
 .panel-back {
     background-color:#fff;
@@ -167,11 +174,13 @@ padding: 18px 10px 13px 0;color: #5D5D5D;}
 .panel-default {
   border-color: #ECECEC;
 }
-.panel-default > .panel-heading {color: #555;
+.panel-default > .panel-heading {
+color: #000;
 border-color: #FFF;
-font-weight:bold;background: #FFFFFF;
+font-weight:bold;
+background: #FFFFFF;
 font-size: 16px;
-text-shadow: none;}
+padding: 15px 15px 0;}
 .panel-heading {
   /* padding: 15px 15px 0px; */
   border-bottom: 1px solid transparent;
@@ -227,7 +236,10 @@ width:100%;
 /* background-color: #1CC09F; */
 color: #fff;
 }
- .blue {background-color: #FFFFFF;color: #002A4C;}
+ .blue {
+background-color: #32CEE4;
+color: #fff
+}
   .red {
 background-color: #FB6E51;
 color:#fff;
@@ -360,9 +372,8 @@ font-size: 14px;
 /*----------------------------------------------
     MENU STYLES    
 ------------------------------------------------*/
-div#sideNav:hover {
-    color: #1f2837;
-}
+
+
 .user-image {
     margin: 25px auto;
 -webkit-border-radius: 10px;
@@ -374,7 +385,17 @@ max-width:170px;
 .top-navbar{
 margin:0px;
 }
-.top-navbar .navbar-brand {color: #fff;width: 260px;text-align: left;height: 60px;font-size: 24px;font-weight: 700;/* text-transform: uppercase; */line-height: 30px;background: #f44336;}
+.top-navbar .navbar-brand {
+color: #fff;
+width: 260px;
+text-align: left;
+height: 60px;
+font-size: 24px;
+font-weight: 700;
+text-transform: uppercase;
+line-height: 30px;
+background: #24383A;
+}
 .navbar-brand b{
 color: #4BD28C;
 }
@@ -384,12 +405,22 @@ display: inline-block;
 margin: 0px;
 padding: 0px;
 }
-.top-navbar .nav > li > a {position: relative;display: block;padding: 17px;color: #484848;margin: 0px;}
-.top-navbar .nav > li > a:hover, .top-navbar .nav > li > a:focus {text-decoration: none;color: #f44336 !important;background: transparent;}
+.top-navbar .nav > li > a {
+position: relative;
+display: block;
+padding: 20px;
+color: #FFFFFF;
+margin: 0px;
+}
+.top-navbar .nav > li > a:hover, .top-navbar .nav > li > a:focus {
+text-decoration: none;
+color: #319DB5 !important;
+background: transparent;
+}
 .top-navbar .dropdown-menu{
 min-width: 230px;
 border-radius: 0 0 4px 4px;
-border: 0;}
+}
 .top-navbar .dropdown-menu > li > a:hover, .top-navbar .dropdown-menu > li > a:focus{
 color: #225081;
 background:none;
@@ -404,17 +435,21 @@ overflow: hidden;
 background-color: #f5f5f5;
 border-radius: 0px;
 }
-.dropdown-tasks > li > a {padding: 5px 14px;}
+.dropdown-tasks > li > a { 
+padding: 0px 15px;
+}
 .dropdown-tasks p {
 font-size: 13px;
 line-height: 21px;
 padding-top: 4px;
 }
-.active-menu, .active-menu i {
-    background-color: #233342 !important;
+.active-menu {
+    background-color: #18A0A9 !important;
     color: #fff !important;
 }
-.active-menu i{color: #f44336 !important;}
+.active-menu i{
+color: #fff !important;
+}
 .arrow {
     float: right;
     margin-top: 8px;
@@ -448,18 +483,19 @@ padding-top: 4px;
 	padding:0;
 }
 .sidebar-collapse .nav > li > a {
-	color: rgba(255, 255, 255, 0.39);
+	color: #FFFFFF;
 	background:transparent;
 	text-shadow:none;
 }
 .sidebar-collapse > .nav > li > a {
-	padding: 8px;
-	font-size: 14px;
+	padding: 12px 10px;
 }
 .sidebar-collapse > .nav > li {
-	border-bottom: 1px solid rgba(107, 108, 109, 0.08);
+	border-bottom: 1px solid rgba(107, 108, 109, 0.19);
 }
-ul.nav.nav-second-level.collapse.in {background: #121821;}
+ul.nav.nav-second-level.collapse.in {
+background: #096E75;
+}
 .sidebar-collapse .nav > li > a:hover,
 .sidebar-collapse .nav > li > a:focus {
 	 
@@ -468,85 +504,65 @@ ul.nav.nav-second-level.collapse.in {background: #121821;}
  
 .navbar-side {
 	border:none;
-	background: #1F2837;
+	background: #32C2CD url(../img/bg-img.jpg) !important;
 }
 .top-navbar {
-	background: #ffffff;
+	background: #4A4A4A;
 	border-bottom:none;
 }
-.top-navbar .nav > li > a > i {margin-right: 0;}
-.top-navbar .navbar-brand:hover {color: #FFFFFF;background-color: #f44336;}
+.top-navbar .nav > li > a > i {
+margin-right: 2px;
+}
+.top-navbar .navbar-brand:hover { 
+color: #1CC09F;
+
+background-color: rgb(43, 46, 51);
+}
 .dropdown-user li {
 margin: 8px 0;
 }
-.navbar-default {border: 0px solid #1f2837;}
+.navbar-default {
+border:0px solid black;
+     
+}
 .navbar-header {
     background: transparent;
 }
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {background-color: #f44336;}
-.navbar-default .navbar-toggle {border-color: #ffffff;}
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+background-color: #283643;
+}
+.navbar-default .navbar-toggle {
+border-color: #fff;
+}
 
-.navbar-default .navbar-toggle .icon-bar {background-color: #ffffff;}
+.navbar-default .navbar-toggle .icon-bar {
+background-color: #FFF;
+}
 .nav > li > a > i {
     margin-right:10px;
-    color: #1f2837;
-    font-size: 16px;
+    color: #FFF;
 }
 .dropdown-menu>li>a>strong {
-  color: #0866C6;
+  color: #1CC09F;
   padding: 5px 0;
   display: inline-block;
   font-weight: 500;
 }
 #sideNav{
-    float: left;
-    left: 0;
+    position: absolute;
+    right: -28px;
     z-index: 3;
-    color: #f44336;
+    background-color: #CFCECE;
+    padding: 3px 9px;
+    top: -11px;
+    color: #283643;
     cursor:pointer;
-    border-radius: 0;
-    width: 14px;
-    font-size: 44px;
-    line-height: 33px;
-    margin: 7px 0 0 13px;
-    background: #ffffff;
-    width: 34px;
-    height: 34px;
-    text-align: center;
-    line-height: 34px;
-    padding-top: 5px;
-    margin-top: 14px;
-    border-radius: 50%;
+    border-radius: 0 15px 15px 0;
+    width: 28px;
+    font-size: 16px;
 }
 ul.dropdown-menu.dropdown-messages li a div {
   padding: 2px 0;
-}
-#page-wrapper{
-	background: #e0e8f5;
-}
-.dashboard-cards .card-stacked{
-	color:#fff;
-	border-left: 1px solid rgba(255, 255, 255, 0.18);
-}
-.dashboard-cards .card-content{
-	border-bottom: 1px solid rgba(255, 255, 255, 0.18);
-}
-.dashboard-cards .card-action strong{
-	font-weight:700;
-	font-size: 16px;
-	color: rgba(255, 255, 255, 0.65);
-}
-.donutpad {
-    padding: 32px 0;
-}
-.cirStats h4{
-	text-transform:uppercase;
-}
-.card-action b{
-	text-transform:uppercase;
-}
-.collection .collection-item{
-	padding: 16px 20px;
 }
 /*----------------------------------------------
     UI ELEMENTS STYLES     
@@ -570,8 +586,10 @@ line-height: 1.428571429;
  @media(min-width:768px) {
      #page-wrapper{
                margin: 0 0 0 260px;
-               padding: 0;
+        padding: 15px 30px;
+        
                min-height: 1200px;
+		
     }
 	
 	
@@ -585,27 +603,11 @@ line-height: 1.428571429;
 }
    
 }
- @media(max-width:768px) {
-	#sideNav{
-	display:none;
-} 
- #page-wrapper {
-position: relative;
-top: 59px;
- }
- }
  @media(max-width:480px) {
- #page-wrapper {
-position: relative;
-top: 93px;
- }
 .page-header small {
 display: block;
 padding-top: 14px;
 font-size: 19px;
-}
-#sideNav{
-	display:none;
 }
 .panel-left {
   width: 85px;
@@ -615,126 +617,5 @@ font-size: 19px;
   margin: 14px;
 }
 }
-.dropdown-content{
-    min-width: 165px !important;
-    left: -38px !important;
-    top: 60px !important;
-}
-.w250{
-	    min-width: 255px !important;
-	    left: -184px !important;
-}
-.top-navbar .nav > li > a b{
-	margin:0 5px;
-}
-.dropdown-content li>a{
-	font-size:14px;
-	text-decoration:none;
-	color: #233342;
-}
-.dropdown-content li>a i{
-	font-size:16px;
-}
-.dropdown-content li>a{
-	font-size: 12px;
-	/* margin: 0 4px; */
-	padding: 0;
-}
-.card.horizontal.cardIcon .card-image {
-    background: #30cc7b;
-    color: #fff !important;
-    font-size: 10px;
-    width: 94px;
-    text-align: center;
-    vertical-align: middle;
-}
-.card.horizontal.cardIcon .card-image i {
-    margin-top: 45%;
-    font-size: 55px;
-    opacity: .4;
-}
-.navbar-brand i.large.material-icons {
-    float: left;
-    font-size: 31px;
-    margin-right: 6px;
-}
-.clearBoth{
-	 clear:both;
-}
-.icon-preview {
-    font-size: 13px !important;
-    padding: 15px !important;
-    display: inline-block;
-    line-height: 20px !important;
-}
-.icon-preview span {
-    display: inherit;
-}
-.header .breadcrumb:before{
-	    font-size: 14px;
-	    margin-right: 0px;
-	    color: #717171;
-	    display: none;
-}
-.header .breadcrumb li a{
-	font-size: 13px;
-	font-size: 13px;
-	text-decoration: none;
-	color: #717171;
-	text-decoration: none;
-	color: #f44336;
-}
-.dropdown-content li{
-	padding: 15px;
-	color: #233342;
-	font-size: 13px;
-}
-.taskList li{padding: 20px 15px 5px;background: #fff;font-size: 12px;}
-.taskList > div{
-padding: 0 15px 0px 15px;
-}
-.taskList p{
-}
-.taskList .dropdown-content li>a {
-    font-size: 12px;
-    padding:0px;
-}
-.taskList li:last-child {
-    padding-top: 5px;
-    color: #f44336;
-}
- @media(max-width:768px) {
-	  
-	 .navbar-header {
-		background: #f44336;
-	}
-	.navbar-side {
-		z-index: 2;
-		position: fixed;
-		width: 260px;
-		top: 69px;
-		box-shadow: none;
-	}
- }
-  @media(max-width:520px) {
-	  ul#dropdown1 {
-			left: 0px !important;
-		}
-	 ul#dropdown2 {
-			left: -69px !important;
-		}
-		.top-navbar .nav > li > a{
-			padding:17px 12px;
-		}
- }
-   @media(max-width:320px) {
-	  ul#dropdown1 {
-			left: 0px !important;
-		}
-	 ul#dropdown2 {
-			left: -69px !important;
-		}
-		.top-navbar .nav > li > a{
-			padding:17px 9px;
-		}
- }
+
+
