--- a/templates/base.html
+++ b/templates/base.html
@@ -591,6 +591,8 @@
             </li>
 
         </ul><!-- /.nav-list -->
+        {% load menu %}
+        {% get_menu %}
 
         <div class="sidebar-toggle sidebar-collapse" id="sidebar-collapse">
             <i id="sidebar-toggle-icon" class="ace-icon fa fa-angle-double-left ace-save-state"
