--- a/menu_management/templates/tags_html/menu.html
+++ b/menu_management/templates/tags_html/menu.html
@@ -53,9 +53,9 @@
                     </ul>
                 </li>
             {% endfor %}
-            <li>
-                <a href="#"><i class="fa fa-fw fa-file"></i> Empty Page</a>
-            </li>
+{#            <li>#}
+{#                <a href="#"><i class="fa fa-fw fa-file"></i> Empty Page</a>#}
+{#            </li>#}
         </ul>
     </div>
 
