--- a/templates/user_management_html/cccccc.html
+++ b/templates/user_management_html/cccccc.html
@@ -100,38 +100,40 @@
                                 </a>
                                 <!-- 编辑模态框-->
 
-{#                                <a class="btn btn-xs btn-success" title="编辑" data-toggle="modal"#}
-{#                                   data-target="#editmyModal{{ forloop.counter }}">#}
-{#                                    <i class="ace-icon fa fa-pencil-square-o bigger-120" title="编辑"></i>#}
-{#                                </a>#}
 
-                                <a class="btn btn-xs btn-success" title="删除" data-toggle="modal"
+
+
+                                <a class="btn btn-xs btn-success" title="编辑" data-toggle="modal"
                                    data-target="#editmyModal{{ forloop.counter }}">
-                                    <i class="btn btn-mini btn-success">编辑员工</i>
+                                    <i class="ace-icon fa fa-pencil-square-o bigger-120" title="编辑"></i>
                                 </a>
 
-                                 <div class="modal fade" id="editmyModal{{ forloop.counter }}" tabindex="-1" role="dialog"
-                     aria-labelledby="myModalLabel">
-                    <div class="modal-dialog" role="document" style="width: 1000px">
-                        <div class="modal-content" style="width:800px; height:800px;">
 
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal"
-                                        aria-label="Close"><span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
 
-                            <div class="modal-body" style="width:800px; height:800px;">
 
-                                <!-- 新增员工-->
-                                <div align="center">
-                                    <p class="btn btn-default" style="width: 150px;height: 40px">增
-                                        &nbsp加&nbsp用&nbsp户 &nbsp信&nbsp 息</p>
-                                </div>
+                                 <div class="modal fade" id="editmyModal{{ forloop.counter }}" tabindex="-1"
+                                     role="dialog"
+                                     aria-labelledby="myModalLabel">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal"
+                                                       aria-label="Close"><span aria-hidden="true">&times;</span>
 
-                                <div class="col-md-offset-1">
+
+                                                </button>
+
+                                            </div>
+                                            <div class="modal-body">
+
+
+                                                <!-- 编辑模块-->
+
+
+
+                                                <div class="col-md-offset-1">
                                     <hr/>
-                                    <form action="" method="post" >
+                                    <form action="" method="post" class="form-horizontal">
                                         {% csrf_token %}
                                         <div class="form-group">
                                             <label for="username" class="col-sm-2 control-label">用户名：</label>
@@ -192,6 +194,7 @@
                                         </div>
 
 
+
                                         <div class="form-group">
                                             <label for="username" class="col-sm-2 control-label">角色：</label>
                                             <div class="col-sm-5">
@@ -211,20 +214,24 @@
                                 </div>
 
 
-                                <!--新增员工 -->
 
 
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">
-                                    取消
-                                </button>
-                                <a href="/user_management/add_user/"
-                                   class="btn btn-danger">确定保存</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                                                <!-- 编辑模块-->
+
+
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-default" data-dismiss="modal">
+                                                    取消
+                                                </button>
+                                                <a href="/user_management/add_user/"
+                                                   class="btn btn-danger">确定保存</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
 
 
                                 <!-- 编辑模态框-->
@@ -367,6 +374,7 @@
                                                        name="staff_salary" placeholder="请在这里输入备注信息">
                                             </div>
                                         </div>
+
 
 
                                         <div class="form-group">
